fixed image pathing

--- a/view.html
+++ b/view.html
@@ -80,7 +80,7 @@
       display: block;
       height: 600px;
       width: 100%;
-      background-image: url("cycleman.jpeg");
+      background-image: url("assets/cycleman.jpeg");
       background-repeat: no-repeat;
       background-size: 100% 150%;
       background-position: center;
@@ -133,7 +133,7 @@
       border-radius: 5px;
       position: relative;
       z-index: 3;
-      background-image: url("comparing.png");
+      background-image: url("assets/comparing.png");
       background-repeat: no-repeat;
       background-size: 90% 150px;
       background-position: center;
@@ -226,7 +226,7 @@
   </head>
   <body>
     <div class="mainHead">
-      <img src="default.png" id="logo" style=float:left;>
+      <img src="assets/default.png" id="logo" style=float:left;>
     </div>
     <div class="undersideImage">
       <div id="mainTextHolder">
